# read-macho

./: CMakeLists.txt  LICENSE  README.md  compile_flags.txt
read_macho/: read_macho.c
read_macho/types/: load_command.c  load_command.h  load_command_type.h  macho_header.c  macho_header.h  macho_header_type.h  segment_load_command.c  segment_load_command.h  segment_load_command_type.h  segment_section.c  segment_section.h  segment_section_type.h
read_macho/util/: br.c  br.h  br_type.h  br_unit.c  defs.h  tvec.h  tvec_unit.c
read_macho/values/: cpu_subtype_arm.h  cpu_subtype_x86.h  cpu_type.h  file_type.h  flag.h
